--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -6,5 +6,8 @@
     "Reset Password": "Redefinir Senha",
     "This password reset link will expire in :count minutes.": "Este link de redefinição de senha expirará em :count minutos.",
     "If you did not request a password reset, no further action is required.": "Se você não solicitou uma redefinição de senha, nenhuma ação adicional é necessária.",
-    "Confirm": "Confirmar"
+    "Confirm": "Confirmar",
+    "Save": "Salvar",
+    "Saved.": "Salvo",
+    "Cancel": "Cancelar"
 }
