feat: formulário frontend feito

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -9,5 +9,6 @@
     "Confirm": "Confirmar",
     "Save": "Salvar",
     "Saved.": "Salvo",
-    "Cancel": "Cancelar"
+    "Cancel": "Cancelar",
+    "Type": "Tipo"
 }
