feat: Prepara dados para criação da resposta

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -9,6 +9,8 @@
     "Accepted": "Aceito",
     "Action": "Ação",
     "Actions": "Ações",
+    "Required Field": "Campo Obrigatório",
+    "Invalid alternative": "Alternativa inválida selecionada.",
     "Add": "Adicionar",
     "Add :name": "Adicione :name",
     "Admin": "Administrador",
