feat: refatora a trait snapshotable para usar de maneira independente do filamente refatorando seguindo DRY e mostrando resposta

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -237,6 +237,7 @@
     "Translate": "Traduzir",
     "Translate It": "Traduza isso",
     "Type": "Tipo",
+    "Successfully saved": "Salvo com sucesso!",
     "Unauthorized": "Não autorizado",
     "Unavailable For Legal Reasons": "Indisponível Por Motivos Legais",
     "Unknown Error": "Erro Desconhecido",
