--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -265,5 +265,6 @@
     "You are receiving this email because we received a password reset request for your account.": "Você recebeu esse e-mail porque foi solicitado uma redefinição de senha na sua conta.",
     "You're logged in!": "Você está logado!",
     "Your email address is unverified.": "Seu endereço de e-mail não foi verificado.",
-    "See": "Ver"
+    "See": "Ver",
+    "All": "Todos"
 }
